Mon Sep 27 11:58:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Added 2112 and removed SUNCC_51 checks

        * orbsvcs/tests/Bug_2112_Regression:
        * orbsvcs/tests/Bug_2112_Regression/Bug_2112_Regression.mpc:
        * orbsvcs/tests/Bug_2112_Regression/client.cpp:
        * orbsvcs/tests/Bug_2112_Regression/run_test.pl:
          Integrated test for bugzilla 2112

Mon Sep 27 11:41:31 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MProfile_Connection_Timeout/client.cpp:
          Fixed compile warning.

Mon Sep 27 07:47:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
          Extension component has less methods that need to be generated

Sun Sep 26 18:34:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_provides.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        * TAO_IDL/be/be_visitor_home/home_svh.cpp:
        * TAO_IDL/be/be_visitor_home/home_svs.cpp:
          Updated for ciao changes

Fri Sep 24 14:51:28 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_other_tests.lst:
          Disabled test for bug 2777 in static builds.

Fri Sep 24 14:19:37 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:

          Fixed a bug in the perl script: $p is an array-ref.

Fri Sep 24 14:07:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Changed some generated includes because of changes in CIAO

        * TAO_IDL/be/be_util.cpp:
          Fixed some small issues when really using the ciao_container_type
          option

        * docs/compiler.html: