@@ -1,3 +1,11 @@
+Mon Sep 27 14:22:25 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tao/AnyTypeCode/SystemExceptionA.cpp:
+        
+          Added CORBA namespace scoping to the system exception
+          Any extraction operator macro. Thanks to Matthew Waller
+          <matthewrwaller at gmail dot com> for reporting the bug.
+
 Mon Sep 27 11:58:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/tao_orb_tests.lst:
